# classificazione-semantica-mail-storiche

./: .gitignore  AGENTS.md  AVVIA_CONSOLE.bat  CONTROLLO_WORKSPACE.bat  COSTRUISCI_ATLANTE.bat  CREA_STUDIO.bat  EMAIL_ATLAS.bat  ESPORTA_ORANGE.bat  README.md  RIPARA_WORKSPACE.bat  pyproject.toml
.codex/prompts/: automation_cycle.md  fix_pipeline.md  next_task.md  review_outputs.md
.codex/state/: backlog.json  blocked.md  decisions.md  run_log.md
.github/workflows/: codex-autonomous.yml
archive/: README.md
archive/windows-launchers/: start_gui.bat
config/: default.yaml
config/entities/: exclusion_terms.yaml  public_bodies.yaml  technical_terms.yaml
docs/: README.md  acceptance_criteria.md  aggiornamento_periodico.md  architettura.md  atlante_semantico.md  atlas_finale.md  autonomous_workflow.md  avanzato.md  avanzato_termini_tecnici.md  classification_workspace.md  classificazione.md  clustering_tuning.md  comandi.md  database_dependencies.md  development_backlog.md  glossario.md  gui.md  guida_rapida.md  guida_uso_completa.md  interfaccia_utente.md  llm_leggeri.md  llm_locale.md  non_interactive_codex.md  orange_export.md  pipeline.md  primi_passi.md  privacy.md  revisione_umana.md  ripensamento_progetto_atlante_semantico.md  roadmap_futura.md  scalability_benchmark.md  studio_workbench.md  termini_tecnici_avanzati.md  thunderbird_mbox_study.md  troubleshooting.md  uso_operativo.md  ux_classi_archivio_ai.md  ux_review.md  ux_terminologia_llm_onboarding.md  v3_1_rientro_semplicita_controllo_contesto.md  (+2 more)
docs/archive/: README.md  (+7 more)
reports/: atlas_implementation_report.md
scripts/: codex_guard.ps1  codex_guard.sh  codex_next_task.ps1  codex_next_task.sh  run_quality_checks.ps1  run_quality_checks.sh  scalability_benchmark.py
tests/: test_atlas.py  test_atlas_conversations.py  test_atlas_gui_quality.py  test_atlas_missing_project.py  test_atlas_reset.py  test_cleaning.py  test_cluster_review.py  test_clustering_diagnostics.py  test_codex_automation_assets.py  test_context_v2.py  test_database.py  test_export.py  test_operational_v31.py  test_parser.py  test_repository_v2.py  test_review_v3.py  test_study_workbench.py  test_thunderbird_workspace.py  test_ui_v4.py  test_windows_launchers.py  test_workspace_health.py
(+102 files in other folders)
