[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-semantic-cluster"
version = "0.1.0"
description = "Pipeline locale per parsing, pulizia, clustering e interrogazione semantica di archivi email."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "charset-normalizer>=3.3",
    "numpy>=1.26",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "rich>=13.7",
    "scikit-learn>=1.4",
    "typer>=0.12",
]

[project.optional-dependencies]
ml = [
    "hdbscan>=0.8.33",
    "sentence-transformers>=2.7",
    "umap-learn>=0.5.6",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
email-cluster = "email_cluster.cli.app:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

